SERVER-31684 Fix unexpected "operation exceeded time limit" errors

The changestream queries used an operation context deadline to track
a wait time before returning EOF. This occasionaly interfered with
normal operation deadlines leading to unexpected errors.